--- a/src/components/Rodape/Rodape.css
+++ b/src/components/Rodape/Rodape.css
@@ -6,6 +6,10 @@
     background-size:cover;
     background-position: center;
 }
+.LogoRodape{
+    background-image: url('/img/Footer/LogoP7.svg');
+
+}
 @media only screen and (min-width: 1200px) {
     .RodapeContainer{
         height: 40vh;
