--- a/src/components/NavBar/style/Nav.css
+++ b/src/components/NavBar/style/Nav.css
@@ -20,7 +20,7 @@ header {
   background-size:cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-image: url('./img/nav_deisgn-01.svg');
+  background-image: url('/img/navBK.svg');
   color: var(--textColor);
   overflow: hidden;
 }
