--- a/src/components/Whatsapp/Whatsapp.css
+++ b/src/components/Whatsapp/Whatsapp.css
@@ -26,7 +26,7 @@
         margin-left: -10%;
         margin-bottom: 10%;
         height: 70px;
-        background-color: #3267A5;
+        background-color: #5A53A3;
         opacity: 1;
     
     }
@@ -60,7 +60,7 @@
         margin-left: -10%;
         margin-bottom: 10%;
         height: 70px;
-        background-color: #3267A5;
+        background-color: #5A53A3;
         opacity: 10;
     
     }
@@ -130,7 +130,7 @@
         margin-left: -10%;
         margin-bottom: 10%;
         height: 0px;
-        background-color: #3267A5;
+        background-color: #5A53A3;
         opacity: 10;
         visibility: hidden;
     }
