--- a/src/components/NavBar/style/Nav.css
+++ b/src/components/NavBar/style/Nav.css
@@ -1,6 +1,8 @@
 /* Estilo nav desk  */
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap");
-
+.lock-scroll {
+  overflow: hidden;
+}
 :root {
   --mainColor: #29335c;
   --mainColorLight: #5767aa;
@@ -56,7 +58,7 @@ header .nav-btn {
   }
 
   header nav {
-    position: fixed !important;
+    position:fixed;
     top: 0;
     left: 0;
     width: 100%;
