--- a/src/components/NavBar/style/Navm.css
+++ b/src/components/NavBar/style/Navm.css
@@ -41,6 +41,12 @@ header nav {
     margin-left: 17%;
 }
 header{
+  background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url("/img/Header/navm-BK.svg");
     height: 7rem;
 }
 header .nav-btn {
@@ -104,43 +110,3 @@ header nav {
     color: #fff;
   }
 }
-/* Sidebar no mobile */
-/* @media only screen and (max-width: 699px) {
-  header .nav-btn {
-    visibility: visible;
-    opacity: 1;
-  }
-
-  header nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items:flex-end;
-    justify-content: center;
-    gap: 1.5rem;
-    background-color: var(--mainColor);
-    transition: 0.8s;
-    transform: translateY(-100vh);
-    z-index: 998;
-    overflow-x: hidden;
-  }
-
-  header .responsive_nav {
-    transform: none;
-  }
-
-  nav .nav-close-btn {
-    position: absolute;
-    top: 2.5rem;
-    right: 2rem;
-  }
-
-  nav a {
-    top: 2rem;
-    position: relative;
-    font-size: 1rem;
-  }
-} */
