--- a/src/components/Index/Desktop/BodyDesktop/BodyDesktop_3/BodyDesktop_3.css
+++ b/src/components/Index/Desktop/BodyDesktop/BodyDesktop_3/BodyDesktop_3.css
@@ -12,7 +12,7 @@
 
 .ContainerDesktop_3 {
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  background-image: url("/img/Dobra3/BK3.svg");
+  background-image: url("/img/Dobra3/Landing_Desktop_Dobra 2_3-01.svg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
