--- a/src/components/Index/Mobile/HeaderMobile/DobraMobile_2/DobraMobile_2.css
+++ b/src/components/Index/Mobile/HeaderMobile/DobraMobile_2/DobraMobile_2.css
@@ -1,6 +1,6 @@
 .DobraMobile-Container-2 {
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  background-image: url("/img/Dobra2/BK2.svg");
+  background-image: url("/img/Dobra2/Landing_MobileP7_Dobra 2_3-01.svg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
