--- a/src/components/Index/Desktop/FooterDesktop/FooterDesktop_7/FooterDesktop_7.css
+++ b/src/components/Index/Desktop/FooterDesktop/FooterDesktop_7/FooterDesktop_7.css
@@ -8,7 +8,7 @@
     background-attachment:scroll;
     background-size:cover;
     background-position:center;
-  height: 100vh;
+  height: 120vh;
 }
 .enviarpjBTN{
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
@@ -30,17 +30,171 @@
 }
 /* politica de privacidade (END) */
 
-
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1500px)  {
   .formMainH1 {
     font-size: 1.8rem;
     width: 18rem;
-    margin-bottom: 25rem;
+    margin-bottom: 40rem;
   }
 
   .ConteudoFormTotal {
     background-color: #893094;
-    height: 90%;
+    height:80%;
+    width: 40%;
+    border-radius: 15px;
+  }
+
+  .allButtonsForm {
+    width: 60%;
+  }
+
+  .buttonForm {
+    width: 20px;
+    height: 20px;
+    border: 2.5px solid #fff;
+  }
+
+  .textLabels {
+    font-size: 1rem;
+  }
+
+  /* Forms styles */
+  .pessoaFisicaForm {
+    width: 100%;
+    height: 500px;
+    background-color: transparent;
+    display: none;
+  }
+
+  .pessoaJuridicaForm {
+    width: 100%;
+    height: 500px;
+    background-color: transparent;
+  }
+
+  /* Conteudo Form Pessoa jurídica */
+  .pessoaJuridicaConteudo1 {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .inputForm {
+    width: 90%;
+    height: 4rem;
+    border-radius: 10px;
+    background-color: #b378b9;
+    color: #fff;
+    padding-left: 15px;
+  }
+/* Cor da borda ao ser clicada */
+  textarea:focus,
+  input:focus {
+    outline-color: #9430b9;
+  }
+/* Cor da borda ao ser clicada (END)*/
+
+/* Remover autofill Background branco */
+  input:-webkit-autofill,
+  input:-webkit-autofill:focus {
+    transition: background-color 600000s 0s, color 600000s 0s;
+}
+  input[data-autocompleted] {
+    background-color: #b378b9 !important;
+}
+/* Remover autofill Background branco (END) */
+
+
+  ::placeholder {
+    color: #fff !important;
+  }
+
+  .divPassosPJ {
+    margin-top: -2.3rem;
+    margin-left: 19%;
+  }
+
+  .buttonPJNextBall {
+    width: 10px;
+    height: 10px;
+    margin-left: 1rem;
+    border: 1px solid #fff;
+  }
+
+  .buttonPJAnteriorBall {
+    width: 10px;
+    height: 10px;
+    border: 1px solid #fff;
+  }
+
+  .passosPJText {
+    margin-top: 45px;
+    margin-left: -50px;
+  }
+  .buttonPJProximo {
+    width: 200px;
+    height: 60px;
+    border-radius: 10px;
+    border: 1px solid #fff;
+  }
+
+
+  /* pj conteúdo 2 */
+  .pessoaJuridicaConteudo2 {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .containerInputCheck {
+    width: 90%;
+    height: 50%;
+    border-radius: 10px;
+    background-color: #b378b9;
+  }
+
+  .titleInput-Check {
+    font-size: 1rem;
+  }
+
+  .allCheckInput {
+    height: 50%;
+    width: 85%;
+  }
+
+  .inputType-CheckStyle {
+    margin-right: 2rem;
+  }
+
+  .labelCheck-TXT {
+    font-size: 1rem;
+  }
+
+  .enviarpjBTN {
+    width: 200px;
+    height: 60px;
+    border-radius: 10px;
+  }
+}
+
+
+@media only screen and (min-width: 1200px) and (max-width: 1499px)  {
+  .formMainH1 {
+    font-size: 1.8rem;
+    width: 18rem;
+    margin-bottom: 40rem;
+  }
+
+  .ConteudoFormTotal {
+    background-color: #893094;
+    height:80%;
     width: 40%;
     border-radius: 15px;
   }
@@ -189,13 +343,13 @@
   .formMainH1 {
     font-size: 2.3rem;
     width: 20.5rem;
-    margin-bottom: 33rem;
+    margin-bottom: 40rem;
   }
 
   .ConteudoFormTotal {
     /* margin-left: 30%; */
     background-color: #893094;
-    height: 90%;
+    height:80%;
     width: 50%;
     border-radius: 15px;
   }
@@ -332,7 +486,7 @@
   .ConteudoFormTotal {
     /* margin-left: 30%; */
     background-color: #893094;
-    height: 90%;
+    height:80%;
     width: 60%;
     border-radius: 15px;
   }
@@ -469,7 +623,7 @@
   .ConteudoFormTotal {
     /* margin-left: 30%; */
     background-color: #893094;
-    height: 90%;
+    height:80%;
     width: 90%;
     border-radius: 15px;
   }
@@ -606,7 +760,7 @@
   .ConteudoFormTotal {
     /* margin-left: 30%; */
     background-color: #893094;
-    height: 90%;
+    height:80%;
     width: 90%;
     border-radius: 15px;
   }
@@ -735,7 +889,7 @@
   }
 }
 
-@media only screen and (min-width: 0px) and (max-width: 499px) {
+@media only screen and (min-width: 376px) and (max-width: 499px) {
   .formMainH1 {
     display: none;
   }
@@ -743,7 +897,147 @@
   .ConteudoFormTotal {
     /* margin-left: 30%; */
     background-color: #893094;
-    height: 97%;
+    height:80%;
+    width: 90%;
+    border-radius: 15px;
+  }
+
+  .allButtonsForm {
+    width: 80%;
+  }
+
+  .buttonForm {
+    width: 20px;
+    height: 20px;
+    border: 2.5px solid #fff;
+  }
+
+  .textLabels {
+    font-size: 0.8rem;
+  }
+
+  /* Forms styles */
+  .pessoaFisicaForm {
+    width: 100%;
+    height: 500px;
+    background-color: transparent;
+    display: none;
+  }
+
+  .pessoaJuridicaForm {
+    width: 100%;
+    height: 500px;
+    background-color: transparent;
+  }
+
+  /* Conteudo Form Pessoa jurídica */
+  .pessoaJuridicaConteudo1 {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .inputForm {
+    width: 90%;
+    height: 4rem;
+    border-radius: 10px;
+    background-color: #b378b9;
+    color: #fff;
+    padding-left: 15px;
+  }
+
+  textarea:focus,
+  input:focus {
+    outline-color: #9430b9;
+  }
+
+  ::placeholder {
+    color: #fff !important;
+  }
+
+  .buttonPJProximo {
+    width: 200px;
+    height: 60px;
+    border-radius: 10px;
+    border: 1px solid #fff;
+  }
+
+  .divPassosPJ {
+    margin-top: -2.5rem;
+    margin-left: 40%;
+  }
+
+  .buttonPJNextBall {
+    width: 10px;
+    height: 10px;
+    margin-left: 1rem;
+    border: 1px solid #fff;
+  }
+
+  .buttonPJAnteriorBall {
+    width: 10px;
+    height: 10px;
+    border: 1px solid #fff;
+  }
+
+  .passosPJText {
+    margin-top: 45px;
+    margin-left: -50px;
+  }
+
+  /* pj conteúdo 2 */
+  .pessoaJuridicaConteudo2 {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .containerInputCheck {
+    width: 90%;
+    height: 50%;
+    border-radius: 10px;
+    background-color: #b378b9;
+  }
+
+  .titleInput-Check {
+    font-size: 1.3rem;
+  }
+
+  .allCheckInput {
+    height: 50%;
+    width: 75%;
+  }
+
+  .inputType-CheckStyle {
+    margin-right: 1rem;
+  }
+
+  .labelCheck-TXT {
+    font-size: 0.8rem;
+  }
+
+  .enviarpjBTN {
+    width: 200px;
+    height: 60px;
+    border-radius: 10px;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 375px) {
+  .formMainH1 {
+    display: none;
+  }
+
+  .ConteudoFormTotal {
+    /* margin-left: 30%; */
+    background-color: #893094;
+    height:90%;
     width: 90%;
     border-radius: 15px;
   }
