--- a/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_1/HeaderDesktop_1.css
+++ b/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_1/HeaderDesktop_1.css
@@ -1,7 +1,7 @@
 .ContainerDesktop_1 {
   height: 100vh;
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra1/Dobra1.png');
+  background-image: url('/img/Dobra1/Landing_Desktop_Dobra 1-01.svg');
   background-repeat: no-repeat;
   background-attachment:scroll;
   background-size:cover;
