--- a/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_2/CarouselD2/CarouselHeaderDesktop_2.css
+++ b/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_2/CarouselD2/CarouselHeaderDesktop_2.css
@@ -11,7 +11,7 @@ background-position-y: center;
 @media only screen and (min-width: 1150px) and (max-width:1599.95px) {
   .ContainerCarouselDesktop_2 {
     box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-    background-image: url('/img/Dobra2/BK2.svg');
+    background-image: url('/img/Dobra2/Landing_Desktop_Dobra 2_3-01.svg');
     background-repeat: no-repeat;
     background-attachment:scroll;
     background-size:cover;
@@ -66,12 +66,6 @@ background-position-y: center;
 
 @media only screen and (min-width: 900px) and (max-width:1149px) {
   .ContainerCarouselDesktop_2 {
-    box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-    background-image: url('/img/Dobra2/BK2.svg');
-    background-repeat: no-repeat;
-    background-attachment:scroll;
-    background-size:cover;
-    background-position: center;
     height: 100vh;
   }
   .titulo-Carousel-desktop2 {
@@ -120,12 +114,6 @@ background-position-y: center;
 }
 @media only screen and (min-width: 700px) and (max-width:899px) {
   .ContainerCarouselDesktop_2 {
-    box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-    background-image: url('/img/Dobra2/BK2.svg');
-    background-repeat: no-repeat;
-    background-attachment:scroll;
-    background-size:cover;
-    background-position: center;
     height: 100vh;
   }
   .titulo-Carousel-desktop2 {
