--- a/src/components/Whatsapp/Whatsapp.css
+++ b/src/components/Whatsapp/Whatsapp.css
@@ -11,8 +11,8 @@
         height: 100px;
     }
     .WppBackground{
-        width:55px;
-        height: 55px;
+        width:40px;
+        height: 40px;
         background-color: #10B916;
         display: flex;
         justify-content: center;
@@ -22,10 +22,10 @@
         position: fixed;
     }
     .WppChatBox{
-        width: 12.5rem;
+        width: 8rem;
         margin-left: -10%;
         margin-bottom: 10%;
-        height: 70px;
+        height: 50px;
         background-color: #5A53A3;
         opacity: 1;
     
@@ -41,12 +41,12 @@
     }
     
     .WppIcon{
-        width: 80px;
-        height: 80px;
+        width: 100px;
+        height: 100px;
     }
     .WppBackground{
-        width:50px;
-        height: 50px;
+        width:40px;
+        height: 40px;
         background-color: #10B916;
         display: flex;
         justify-content: center;
@@ -56,16 +56,13 @@
         position: fixed;
     }
     .WppChatBox{
-        width: 12rem;
+        width: 8rem;
         margin-left: -10%;
         margin-bottom: 10%;
-        height: 70px;
+        height: 50px;
         background-color: #5A53A3;
-        opacity: 10;
+        opacity: 1;
     
-    }
-    .WppText{    
-        font-size: 0.9rem;
     }
     
 }
@@ -74,15 +71,16 @@
         position: fixed;
         right: 2%;
         bottom: 5%;
+        z-index: 9999999;
     }
     
     .WppIcon{
-        width: 80px;
-        height: 80px;
+        width: 100px;
+        height: 100px;
     }
     .WppBackground{
-        width:50px;
-        height: 50px;
+        width:40px;
+        height: 40px;
         background-color: #10B916;
         display: flex;
         justify-content: center;
@@ -92,16 +90,13 @@
         position: fixed;
     }
     .WppChatBox{
-        width: 11rem;
+        width: 8rem;
         margin-left: -10%;
         margin-bottom: 10%;
-        height: 60px;
-        background-color: #3267A5;
-        opacity: 10;
+        height: 50px;
+        background-color: #5A53A3;
+        opacity: 1;
     
-    }
-    .WppText{    
-        font-size: 0.9rem;
     }
     
 }
