Vidas logo added

--- a/src/components/Index/Mobile/FooterMobile/DobraMobile_6/DobraMobile_6.css
+++ b/src/components/Index/Mobile/FooterMobile/DobraMobile_6/DobraMobile_6.css
@@ -27,6 +27,14 @@
     background-size:7rem;
     background-position: center;
   }
+  .logoVidasMobile{
+    box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
+    background-image: url('/img/Dobra6/LogosEspaçoP7/Logo-Vidas.svg');
+    background-repeat: no-repeat;
+    background-attachment:scroll;
+    background-size:7rem;
+    background-position: center;
+  }
   .logoSenaiF6Mobile{
     box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
     background-image: url('/img/Dobra6/LogosEspaçoP7/Sesi.svg');
