Try fix  1366px

--- a/src/components/Index/Desktop/FooterDesktop/FooterDesktop_6/FooterDesktop_6.css
+++ b/src/components/Index/Desktop/FooterDesktop/FooterDesktop_6/FooterDesktop_6.css
@@ -3,8 +3,8 @@
   background-image: url('/img/Dobra6/Landing_Desktop_Dobra 6-01.svg');
   background-repeat: no-repeat;
   background-attachment:scroll;
-  background-size:cover;
-  background-position: center;
+  background-size:170%;
+  background-position: top;
 }
 .agendeTour-btn{
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
