--- a/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_2/CarouselD2/CarouselHeaderDesktop_2.css
+++ b/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_2/CarouselD2/CarouselHeaderDesktop_2.css
@@ -55,7 +55,14 @@ background-position-y: center;
     max-width: 250px ;
     height: 400px ;
     border: 1px solid #fff;
-  }
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    }
+    .square-conteudo2-desktop:hover {
+      transform: scale(1.08);
+  
+    }
+  
   .Faca_parte_btn_Carousel_desktop {
     width: 200px;
     height: 50px;
@@ -110,6 +117,13 @@ background-position-y: center;
     max-width: 250px ;
     height: 400px ;
     border: 1px solid #fff;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    }
+    .square-conteudo2-desktop:hover {
+      transform: scale(1.08);
+  
+    
   }
   .Faca_parte_btn_Carousel_desktop {
     width: 200px;
@@ -164,6 +178,12 @@ background-position-y: center;
     max-width: 250px ;
     height: 400px ;
     border: 1px solid #fff;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    }
+    .square-conteudo2-desktop:hover {
+      transform: scale(1.08);
+  
   }
   .Faca_parte_btn_Carousel_desktop {
     width: 250px;
