--- a/src/components/Index/Desktop/FooterDesktop/FooterDesktop_7/FooterDesktop_7.css
+++ b/src/components/Index/Desktop/FooterDesktop/FooterDesktop_7/FooterDesktop_7.css
@@ -1050,7 +1050,7 @@
   .ConteudoFormTotal {
     /* margin-left: 30%; */
     background-color: #893094;
-    height:80%;
+    height:95%;
     width: 90%;
     border-radius: 15px;
   }
@@ -1190,7 +1190,7 @@
   .ConteudoFormTotal {
     /* margin-left: 30%; */
     background-color: #893094;
-    height:90%;
+    height:98%;
     width: 90%;
     border-radius: 15px;
   }
@@ -1260,8 +1260,9 @@
   }
 
   .divPassosPJ {
-    margin-top: -2.5rem;
+    margin-top: -0.9rem;
     margin-left: 40%;
+    height: 20px;
   }
 
   .buttonPJNextBall {
