--- a/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_2/HeaderD2/HeaderDesktop_2.css
+++ b/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_2/HeaderD2/HeaderDesktop_2.css
@@ -55,7 +55,7 @@
   
   .ContainerDesktop_2 {
     box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-    background-image: url('/img/Dobra2/Landing_Desktop_Dobra 2_3-01.svg');
+    background-image: url('/img/Dobra2/BK2.svg');
     background-repeat: no-repeat;
     background-attachment:scroll;
     background-size:cover;
