--- a/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_1/HeaderDesktop_1.css
+++ b/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_1/HeaderDesktop_1.css
@@ -1,70 +1,21 @@
 .ContainerDesktop_1 {
   height: 100vh;
-  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra1/Landing_Desktop_Dobra 1-01.svg');
+  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  background-image: url("/img/Dobra1/Landing_Desktop_Dobra 1-01.svg");
   background-repeat: no-repeat;
-  background-attachment:scroll;
-  background-size:cover;
-  background-position:center;
+  background-attachment: scroll;
+  background-size: cover;
+  background-position: center;
 }
-/* BotaoBK */
 .botao_parte_desktop3 {
-  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra1/Ativo.svg');
+  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  background-image: url("/img/Dobra1/Ativo.svg");
   background-repeat: no-repeat;
-  background-attachment:scroll;
-  background-size:cover;
-  background-position:center;
+  background-attachment: scroll;
+  background-size: cover;
+  background-position: center;
 }
-/* BotaoBK (END)*/
-
-
-/* Responsividades */
-
-
 @media only screen and (min-width: 1230px) {
- 
-  .todos-txt-desktop1 {
-    margin-left: 6%;
-  }
-  .titulo-desktop1 {
-    font-size: 1.8rem;
-    width: 18rem;
-  }
-  .texto-desktop1 {
-    font-size: 1rem;
-    width: 18rem;
-  }
-  .botao_parte_desktop3 {
-
-    width: 200px;
-    height: 50px;
-  }
-}
-
-@media only screen and (min-width: 1063px) and (max-width:1229px) {
- 
-  .todos-txt-desktop1 {
-    margin-left: 6%;
-  }
- 
-   .titulo-desktop1 {
-    font-size: 1.8rem;
-    width: 18rem;
-  }
-  .texto-desktop1 {
-    font-size: 1rem;
-    width: 18rem;
-  }
-  .botao_parte_desktop3 {
-   
-    width: 200px;
-    height: 50px;
-  }
-}
-
-@media only screen and (min-width: 900px) and (max-width:1062px) {
- 
   .todos-txt-desktop1 {
     margin-left: 6%;
   }
@@ -81,8 +32,26 @@
     height: 50px;
   }
 }
-@media only screen and (min-width: 700px) and (max-width:899px) {
- 
+@media only screen and (min-width: 1063px) and (max-width: 1229px) {
+  .todos-txt-desktop1 {
+    margin-left: 6%;
+  }
+
+  .titulo-desktop1 {
+    font-size: 1.8rem;
+    width: 18rem;
+  }
+  .texto-desktop1 {
+    font-size: 1rem;
+    width: 18rem;
+  }
+  .botao_parte_desktop3 {
+    width: 200px;
+    height: 50px;
+  }
+}
+
+@media only screen and (min-width: 900px) and (max-width: 1062px) {
   .todos-txt-desktop1 {
     margin-left: 6%;
   }
@@ -99,4 +68,20 @@
     height: 50px;
   }
 }
-
+@media only screen and (min-width: 700px) and (max-width: 899px) {
+  .todos-txt-desktop1 {
+    margin-left: 6%;
+  }
+  .titulo-desktop1 {
+    font-size: 1.8rem;
+    width: 18rem;
+  }
+  .texto-desktop1 {
+    font-size: 1rem;
+    width: 18rem;
+  }
+  .botao_parte_desktop3 {
+    width: 200px;
+    height: 50px;
+  }
+}
