--- a/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_2/CarouselD2/CarouselHeaderDesktop_2.css
+++ b/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_2/CarouselD2/CarouselHeaderDesktop_2.css
@@ -1,22 +1,21 @@
 .Faca_parte_btn_Carousel_desktop {
-
-box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-background-image: url('/img/Dobra2/Ativo2.svg');
-background-repeat: no-repeat;
-background-attachment:scroll;
-background-size:cover;
-background-position-x: center;
-background-position-y: center;
+  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  background-image: url("/img/Dobra2/Ativo2.svg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: center;
 }
 .ContainerCarouselDesktop_2 {
-  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra2/BK2.svg');
+  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  background-image: url("/img/Dobra2/BK2.svg");
   background-repeat: no-repeat;
-  background-attachment:scroll;
-  background-size:cover;
+  background-attachment: scroll;
+  background-size: cover;
   background-position: center;
 }
-@media only screen and (min-width: 1150px) and (max-width:1599.95px) {
+@media only screen and (min-width: 1150px) and (max-width: 1599.95px) {
   .ContainerCarouselDesktop_2 {
     height: 100vh;
   }
@@ -44,27 +43,26 @@ background-position-y: center;
     padding: 0px;
   }
   .img-Carousel-Desktop_2 {
-    width: 100px ;
-    height: 100px ;
+    width: 100px;
+    height: 100px;
     margin-top: 2.5rem;
-    margin-left: 4.5rem ; 
+    margin-left: 4.5rem;
   }
-  .ALL-Quadrado-Desktop2{
+  .ALL-Quadrado-Desktop2 {
     max-width: 100%;
     margin-left: auto;
   }
   .Carousel-Quadrados-Desktop_2 {
-    max-width: 250px ;
-    height: 400px ;
+    max-width: 250px;
+    height: 400px;
     border: 1px solid #fff;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-    }
-    .square-conteudo2-desktop:hover {
-      transform: scale(1.08);
-  
-    }
-  
+  }
+  .square-conteudo2-desktop:hover {
+    transform: scale(1.08);
+  }
+
   .Faca_parte_btn_Carousel_desktop {
     width: 200px;
     height: 50px;
@@ -73,7 +71,7 @@ background-position-y: center;
   }
 }
 
-@media only screen and (min-width: 900px) and (max-width:1149px) {
+@media only screen and (min-width: 900px) and (max-width: 1149px) {
   .ContainerCarouselDesktop_2 {
     height: 100vh;
   }
@@ -100,26 +98,24 @@ background-position-y: center;
     padding: 0px;
   }
   .img-Carousel-Desktop_2 {
-    width: 100px ;
-    height: 100px ;
+    width: 100px;
+    height: 100px;
     margin-top: 2.5rem;
-    margin-left: 4.5rem ;  
+    margin-left: 4.5rem;
   }
-  .ALL-Quadrado-Desktop2{
+  .ALL-Quadrado-Desktop2 {
     max-width: 100%;
     margin-left: auto;
   }
   .Carousel-Quadrados-Desktop_2 {
-    max-width: 250px ;
-    height: 400px ;
+    max-width: 250px;
+    height: 400px;
     border: 1px solid #fff;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-    }
-    .square-conteudo2-desktop:hover {
-      transform: scale(1.08);
-  
-    
+  }
+  .square-conteudo2-desktop:hover {
+    transform: scale(1.08);
   }
   .Faca_parte_btn_Carousel_desktop {
     width: 200px;
@@ -128,7 +124,7 @@ background-position-y: center;
     margin-bottom: 0%;
   }
 }
-@media only screen and (min-width: 700px) and (max-width:899px) {
+@media only screen and (min-width: 700px) and (max-width: 899px) {
   .ContainerCarouselDesktop_2 {
     height: 100vh;
   }
@@ -155,25 +151,24 @@ background-position-y: center;
     padding: 0px;
   }
   .img-Carousel-Desktop_2 {
-    width: 100px ;
-    height: 100px ;
+    width: 100px;
+    height: 100px;
     margin-top: 2.5rem;
-    margin-left: 4.5rem ; 
+    margin-left: 4.5rem;
   }
-  .ALL-Quadrado-Desktop2{
+  .ALL-Quadrado-Desktop2 {
     max-width: 100%;
     margin-left: auto;
   }
   .Carousel-Quadrados-Desktop_2 {
-    max-width: 250px ;
-    height: 400px ;
+    max-width: 250px;
+    height: 400px;
     border: 1px solid #fff;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-    }
-    .square-conteudo2-desktop:hover {
-      transform: scale(1.08);
-  
+  }
+  .square-conteudo2-desktop:hover {
+    transform: scale(1.08);
   }
   .Faca_parte_btn_Carousel_desktop {
     width: 250px;
