--- a/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_2/HeaderD2/HeaderDesktop_2.css
+++ b/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_2/HeaderD2/HeaderDesktop_2.css
@@ -1,67 +1,60 @@
-
 .Faca_parte_btn_desktop {
-  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra2/Ativo2.svg');
+  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  background-image: url("/img/Dobra2/Ativo2.svg");
   background-repeat: no-repeat;
-  background-attachment:scroll;
-  background-size:cover;
-  background-position:center;
-}
-/* Foto das logos dentro de cada quadrado, Ele estiliza a versão under 1600px */
-
-.imgCriativa{
-  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-    background-image: url('/img/Dobra2/iconesD2/iconeCriativa.svg');
-    background-repeat: no-repeat;
-    background-attachment:scroll;
-    background-size:cover;
-    background-position: center;
-}
-.iconeNetwork{
-  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra2/iconesD2/iconeNetwork.svg');
-  background-repeat: no-repeat;
-  background-attachment:scroll;
-  background-size:cover;
+  background-attachment: scroll;
+  background-size: cover;
   background-position: center;
 }
-.iconeDesenvolvimento{
-  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra2/iconesD2/iconeDesenvolvimento.svg');
+.imgCriativa {
+  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  background-image: url("/img/Dobra2/iconesD2/iconeCriativa.svg");
   background-repeat: no-repeat;
-  background-attachment:scroll;
-  background-size:cover;
+  background-attachment: scroll;
+  background-size: cover;
   background-position: center;
 }
-.iconeExpansao{
-  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra2/iconesD2/iconeExpansao.svg');
+.iconeNetwork {
+  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  background-image: url("/img/Dobra2/iconesD2/iconeNetwork.svg");
   background-repeat: no-repeat;
-  background-attachment:scroll;
-  background-size:cover;
+  background-attachment: scroll;
+  background-size: cover;
   background-position: center;
 }
-.iconeVirtual{
-  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra2/iconesD2/iconeVirtual.svg');
+.iconeDesenvolvimento {
+  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  background-image: url("/img/Dobra2/iconesD2/iconeDesenvolvimento.svg");
   background-repeat: no-repeat;
-  background-attachment:scroll;
-  background-size:cover;
+  background-attachment: scroll;
+  background-size: cover;
   background-position: center;
 }
-/* Foto das logos dentro de cada quadrado (END)*/
-
+.iconeExpansao {
+  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  background-image: url("/img/Dobra2/iconesD2/iconeExpansao.svg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+  background-position: center;
+}
+.iconeVirtual {
+  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  background-image: url("/img/Dobra2/iconesD2/iconeVirtual.svg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+  background-position: center;
+}
 @media only screen and (min-width: 1600px) {
-  
   .ContainerDesktop_2 {
-    box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-    background-image: url('/img/Dobra2/BK2.svg');
+    box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0);
+    background-image: url("/img/Dobra2/BK2.svg");
     background-repeat: no-repeat;
-    background-attachment:scroll;
-    background-size:cover;
+    background-attachment: scroll;
+    background-size: cover;
     background-position: center;
     height: 100vh;
-
   }
 
   .titulo-desktop2 {
@@ -78,18 +71,17 @@
     border: solid 1px #fff;
     overflow: hidden;
     cursor: pointer;
-  transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
   }
   .square-conteudo2-desktop:hover {
     transform: scale(1.08);
-
   }
   .img-conteudo2-desktop {
     height: 125px;
     width: 125px;
     margin-bottom: 15rem;
   }
-  .Textos-Quadrados-Container2{
+  .Textos-Quadrados-Container2 {
     max-width: 14rem;
   }
   .Faca_parte_btn_desktop {
@@ -99,4 +91,3 @@
     margin-bottom: 0%;
   }
 }
-
