Dobra 1 & Dobra 5 Titles Line height

--- a/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_1/HeaderDesktop_1.css
+++ b/src/components/Index/Desktop/HeaderDesktop/HeaderDesktop_1/HeaderDesktop_1.css
@@ -20,6 +20,7 @@
     margin-left: 6%;
   }
   .titulo-desktop1 {
+    line-height: 2rem;
     font-size: 1.8rem;
     width: 18rem;
   }
@@ -38,6 +39,7 @@
   }
 
   .titulo-desktop1 {
+    line-height: 2rem;
     font-size: 1.8rem;
     width: 18rem;
   }
@@ -56,6 +58,7 @@
     margin-left: 6%;
   }
   .titulo-desktop1 {
+    line-height: 2rem;
     font-size: 1.8rem;
     width: 18rem;
   }
@@ -73,6 +76,7 @@
     margin-left: 6%;
   }
   .titulo-desktop1 {
+    line-height: 2rem;
     font-size: 1.8rem;
     width: 18rem;
   }
