--- a/src/components/Index/Desktop/BodyDesktop/BodyDesktop_5/BodyDesktop_5.css
+++ b/src/components/Index/Desktop/BodyDesktop/BodyDesktop_5/BodyDesktop_5.css
@@ -68,6 +68,7 @@
     justify-content: center;
   }
   .titulo-desktop5{
+    line-height: 2rem;
     width: 17rem;
     font-size:1.8rem;
     margin-left:0rem;
@@ -108,6 +109,7 @@
     justify-content: center;
   }
   .titulo-desktop5{
+    line-height: 2rem;
     width: 17rem;
     font-size:1.8rem;
     margin-left:0rem;
@@ -147,6 +149,7 @@
     justify-content: center;
   }
   .titulo-desktop5{
+    line-height: 2rem;
     width: 17rem;
     font-size:1.8rem;
     margin-left:5%;
