--- a/src/components/Index/Mobile/HeaderMobile/DobraMobile_1/DobraMobile_1.css
+++ b/src/components/Index/Mobile/HeaderMobile/DobraMobile_1/DobraMobile_1.css
@@ -1,6 +1,6 @@
 .DobraMobile-Container-1{
     box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-    background-image: url('/img/Dobra1/Landing_MobileP7_Dobra _01.svg');
+    background-image: url('/img/Dobra1/Landing-Mobile-Dobra-1.svg');
     background-repeat: no-repeat;
     background-attachment:scroll;
     background-size:cover;
