--- a/src/components/NavBar/style/Navd.css
+++ b/src/components/NavBar/style/Navd.css
@@ -1,109 +1,142 @@
-
-
 @media only screen and (min-width: 1200px) {
-    .logo_Navbar{
-        margin-left: 0rem;
-    }
-    .entrar_p7_btn{
-        margin-left: 80%;
-    }
-    header{
-        height: 7rem;
-    }
-    header .nav-btn {
-        margin-right: 0rem;
-        font-size: 2rem;
-
-    }
-    header nav {
-        height: 65%;
-        width: 100%;
-    }
-    .TXT-links{
-        margin-right: 2.5rem;
-    }
-    .entrar_p7_btn{
-        text-align: center;
-        border-radius: 100px;
-        padding: 3px;
-        width: 170px;
-        border: solid 1px #fff;
-        font-size: 0.8rem;
-      }
-      .entrar_p7_btn, a{
-        cursor: pointer;
-        color: #fff;
-      }
+  .logo_Navbar {
+    margin-left: 0rem;
+  }
+  .entrar_p7_btn {
+    margin-left: 80%;
+  }
+  header {
+    height: 7rem;
+  }
+  header .nav-btn {
+    margin-right: -1rem;
+    font-size: 2rem;
+  }
+  header nav {
+    height: 65%;
+    width: 100%;
+  }
+  .TXT-links {
+    margin-right: 2.5rem;
+  }
+  .entrar_p7_btn {
+    text-align: center;
+    border-radius: 100px;
+    padding: 3px;
+    width: 170px;
+    border: solid 1px #fff;
+    font-size: 0.8rem;
+  }
+  .entrar_p7_btn,
+  a {
+    cursor: pointer;
+    color: #fff;
+  }
 }
-@media only screen and (min-width: 1000px) and (max-width:1199px) {
-    .logo_Navbar{
-        margin-left: 0rem;
-    }
-    .entrar_p7_btn{
-        margin-left: 70%;
-    }
-    header{
-        height: 7rem;
-    }
-    header .nav-btn {
-        margin-right: 0rem;
-        font-size: 2rem;
-
-    }
-    header nav {
-        height: 80%;
-        width: 100%;
-    }
-    .TXT-links{
-        margin-right: 2.5rem;
-    }
-    .entrar_p7_btn{
-        text-align: center;
-        border-radius: 100px;
-        padding: 3px;
-        width: 170px;
-        border: solid 1px #fff;
-        font-size: 0.8rem;
-      }
-      .entrar_p7_btn, a{
-        cursor: pointer;
-        color: #fff;
-      }
+@media only screen and (min-width: 1000px) and (max-width: 1199px) {
+  .logo_Navbar {
+    margin-left: 0rem;
+  }
+  .entrar_p7_btn {
+    margin-left: 70%;
+  }
+  header {
+    height: 7rem;
+  }
+  header .nav-btn {
+    margin-right: -1rem;
+    font-size: 2rem;
+  }
+  header nav {
+    height: 80%;
+    width: 100%;
+  }
+  .TXT-links {
+    margin-right: 2.5rem;
+  }
+  .entrar_p7_btn {
+    text-align: center;
+    border-radius: 100px;
+    padding: 3px;
+    width: 170px;
+    border: solid 1px #fff;
+    font-size: 0.8rem;
+  }
+  .entrar_p7_btn,
+  a {
+    cursor: pointer;
+    color: #fff;
+  }
 }
-@media only screen and (min-width: 700px) and (max-width:999px) {
-    .logo_Navbar{
-        margin-left: 0rem;
-    }
-    .entrar_p7_btn{
-        margin-left: 55%;
-    }
-    header{
-        height: 7rem;
-    }
-    header .nav-btn {
-        margin-right: 0rem;
-        font-size: 2rem;
-
-    }
-    header nav {
-        height: 65%;
-        width: 100%;
-    }
-    .TXT-links{
-        margin-right: 2.5rem;
-    }
-    .entrar_p7_btn{
-        text-align: center;
-        border-radius: 100px;
-        padding: 3px;
-        width: 170px;
-        border: solid 1px #fff;
-        font-size: 0.8rem;
-      }
-      .entrar_p7_btn, a{
-        cursor: pointer;
-        color: #fff;
-      }
+@media only screen and (min-width: 700px) and (max-width: 999px) {
+  .logo_Navbar {
+    margin-left: 0rem;
+  }
+  .entrar_p7_btn {
+    margin-left: 60%;
+  }
+  header {
+    background-image: url("/img/Header/navm-BK.svg");
+    height: 7rem;
+  }
+  header .nav-btn {
+    margin-right: -1rem;
+    font-size: 2rem;
+  }
+  header nav {
+    height: 65%;
+    width: 100%;
+  }
+  .TXT-links {
+    margin-right: 2.5rem;
+  }
+  .entrar_p7_btn {
+    text-align: center;
+    border-radius: 100px;
+    padding: 3px;
+    width: 170px;
+    border: solid 1px #fff;
+    font-size: 0.8rem;
+  }
+  .entrar_p7_btn,
+  a {
+    cursor: pointer;
+    color: #fff;
+  }
 }
-
- 
+@media only screen and (min-width: 500px) and (max-width: 699px) {
+  .logo_Navbar {
+    margin-left: 0rem;
+  }
+  .entrar_p7_btn {
+    margin-left: 50%;
+  }
+  header {
+    background-image: url("/img/Header/navm-BK.svg");
+    height: 7rem;
+  }
+  header .nav-btn {
+    margin-right: -1rem;
+    font-size: 2rem;
+  }
+  header nav {
+    height: 85%;
+    width: 100%;
+  }
+  .TXT-links {
+    margin-right: 2.5rem;
+  }
+  .entrar_p7_btn {
+    text-align: center;
+    border-radius: 100px;
+    padding: 3px;
+    width: 170px;
+    border: solid 1px #fff;
+    font-size: 0.8rem;
+  }
+  .entrar_p7_btn,
+  a {
+    cursor: pointer;
+    color: #fff;
+  }
+}
