--- a/src/components/Index/Desktop/FooterDesktop/FooterDesktop_6/FooterDesktop_6.css
+++ b/src/components/Index/Desktop/FooterDesktop/FooterDesktop_6/FooterDesktop_6.css
@@ -20,7 +20,7 @@
 }
 .logo42BH{
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra6/LogosEspaçoP7/Logo-42.svg');
+  background-image: url('/img/Dobra6/residentes/Logo42.svg');
   background-repeat: no-repeat;
   background-attachment:scroll;
   background-size:10rem;
@@ -28,7 +28,7 @@
 }
 .logoVidas{
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra6/LogosEspaçoP7/Logo-Vidas.svg');
+  background-image: url('/img/Dobra6/residentes/Logovidas.svg');
   background-repeat: no-repeat;
   background-attachment:scroll;
   background-size:9rem;
@@ -36,7 +36,7 @@
 }
 .logoSenaiF6{
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra6/LogosEspaçoP7/Sesi.svg');
+  background-image: url('/img/Dobra6/residentes/Sesi.svg');
   background-repeat: no-repeat;
   background-attachment:scroll;
   background-size:10rem;
@@ -44,7 +44,7 @@
 }
 .logoSesiF6{
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra6/LogosEspaçoP7/Senai.svg');
+  background-image: url('/img/Dobra6/residentes/Senai.svg');
   background-repeat: no-repeat;
   background-attachment:scroll;
   background-size:10rem;
@@ -52,7 +52,7 @@
 }
 .logoIELF6{
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra6/LogosEspaçoP7/IEL.svg');
+  background-image: url('/img/Dobra6/residentes/IEL.svg');
   background-repeat: no-repeat;
   background-attachment:scroll;
   background-size:7rem;
@@ -60,7 +60,7 @@
 }
 .logoFIEMGF6{
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra6/LogosEspaçoP7/FIEMG.svg');
+  background-image: url('/img/Dobra6/residentes/FIEMG.svg');
   background-repeat: no-repeat;
   background-attachment:scroll;
   background-size:10rem;
@@ -68,7 +68,7 @@
 }
 .LogoNeoVentures{
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-  background-image: url('/img/Dobra6/LogosEspaçoP7/NeoV.svg');
+  background-image: url('/img/Dobra6/residentes/Neov.svg');
   background-repeat: no-repeat;
   background-attachment:scroll;
   background-size:10rem;
