--- a/src/components/Index/Mobile/FooterMobile/DobraMobile_6/DobraMobile_6.css
+++ b/src/components/Index/Mobile/FooterMobile/DobraMobile_6/DobraMobile_6.css
@@ -21,7 +21,7 @@
   }
   .logo42BHMobile{
     box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-    background-image: url('/img/Dobra6/LogosEspaçoP7/Logo-42.svg');
+    background-image: url('/img/Dobra6/residentes/Logo42.svg');
     background-repeat: no-repeat;
     background-attachment:scroll;
     background-size:7rem;
@@ -29,7 +29,7 @@
   }
   .logoVidasMobile{
     box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-    background-image: url('/img/Dobra6/LogosEspaçoP7/Logo-Vidas.svg');
+    background-image: url('/img/Dobra6/residentes/Logovidas.svg');
     background-repeat: no-repeat;
     background-attachment:scroll;
     background-size:7rem;
@@ -37,7 +37,7 @@
   }
   .logoSenaiF6Mobile{
     box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-    background-image: url('/img/Dobra6/LogosEspaçoP7/Sesi.svg');
+    background-image: url('/img/Dobra6/residentes/Sesi.svg');
     background-repeat: no-repeat;
     background-attachment:scroll;
     background-size:7rem;
@@ -45,7 +45,7 @@
   }
   .logoSesiF6Mobile{
     box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-    background-image: url('/img/Dobra6/LogosEspaçoP7/Senai.svg');
+    background-image: url('/img/Dobra6/residentes/Senai.svg');
     background-repeat: no-repeat;
     background-attachment:scroll;
     background-size:7rem;
@@ -53,7 +53,7 @@
   }
   .logoIELF6Mobile{
     box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-    background-image: url('/img/Dobra6/LogosEspaçoP7/IEL.svg');
+    background-image: url('/img/Dobra6/residentes/IEL.svg');
     background-repeat: no-repeat;
     background-attachment:scroll;
     background-size:7rem;
@@ -61,7 +61,7 @@
   }
   .logoFIEMGF6Mobile{
     box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-    background-image: url('/img/Dobra6/LogosEspaçoP7/FIEMG.svg');
+    background-image: url('/img/Dobra6/residentes/FIEMG.svg');
     background-repeat: no-repeat;
     background-attachment:scroll;
     background-size:7rem;
@@ -69,7 +69,7 @@
   }
   .LogoNeoVenturesMobile{
     box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, .0);
-    background-image: url('/img/Dobra6/LogosEspaçoP7/NeoV.svg');
+    background-image: url('/img/Dobra6/residentes/Neov.svg');
     background-repeat: no-repeat;
     background-attachment:scroll;
     background-size:7rem;
